--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@
 /vendor/
 .env
 ###< symfony/framework-bundle ###
+
+###> symfony/phpunit-bridge ###
+.phpunit
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
