--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    url_orders: "%kernel.project_dir%/../src/Resources/public/orders-test.xml"
 
 services:
     # default configuration for services in *this* file
